--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-mock/localstorage": "^0.1.2",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "react": "^16.11.0",
